all done except 2 tests that don't reflect functionality

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,5 +11,7 @@
   <%= f.text_field :tickets %><br>
   <%= f.label :height %>
   <%= f.text_field :height %><br>
+  <p>Check this box if you are a park owner
+  <%= f.check_box :admin %></p>
   <%= f.submit %>
 <% end %>
