--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,10 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
            <!--  nav here -->
+           <li><%= link_to "Sign Up", new_user_path %></li>
+           <li><%= link_to "Sign In", signin_path %></li>
+           <li><%= link_to "Log Out", signout_path %></li>
+           <li><%= link_to "New Attraction", new_attraction_path %></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
