--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
+<% if flash[:notice] %>
+ <%= flash[:notice] %>
+ <% end %>
 <ul>
   <li>Name: <%= @user.name %></li>
   <li>Height: <%= @user.height %></li>
@@ -5,4 +8,9 @@
   <li>Happiness: <%= @user.happiness %></li>
   <li>Mood: <%= @user.mood %></li>
   <li>Tickets: <%= @user.tickets %></li>
+  <% if @user.admin %>
+    <li><%= "ADMIN" %></li>
+  <% end %>
 </ul>
+<br>
+<%= link_to "See attractions", attractions_path %>
